# jeff-mitchell-dev

./: .gitignore  .ignore  Cargo.toml  License.txt  README.md  Rustfmt.toml  Shuttle.toml  justfile  package-lock.json
backend/: .ignore  Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/assets/styles/: jeff-mitchell-dev.css
server/: Cargo.toml  Secrets.toml
server/src/: main.rs
site/: Cargo.toml  Trunk.toml  index.html
site/assets/styles/: jeff-mitchell-dev.css
site/src/lib/: app.rs  lib.rs
site/src/lib/components/: mod.rs
site/src/lib/components/footer/: mod.rs
site/src/lib/components/header/: mod.rs
site/src/lib/components/navigation/: mod.rs
site/src/lib/domain/: mod.rs
site/src/lib/pages/: about.rs  astronomy.rs  home.rs  mod.rs  projects.rs
site/src/lib/routes/: mod.rs
