# jeff-mitchell-dev/site/Cargo.toml
# Frontend site cargo configuration

[package]
name = "jeff-mitchell-dev-frontend"
version = "2.36.1"
edition = "2021"
description = "Server for the jeff-mitchell.dev site"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeffmitchelldev.com>"]
repository = "https://github.com/sentinel1909/jeff-mitchell-dev"
license = 'MIT'

[[bin]]
name = "jeff_mitchell_dev_frontend"
path = "src/bin/main.rs"

[dependencies]
leptos = { version = "0.5.7", features = [ "csr" ] }
