[package]
name = "jeff-mitchell-dev-server"
version = "1.8.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = "1.33.0"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.37"
