# jeff-mitchell-dev/site/Cargo.toml
# Frontend site cargo configuration

[package]
name = "jeff-mitchell-dev-site"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "jeff_mitchell_dev_site"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
gloo-net = "0.4.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
url = "2.4.1"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = [ "csr" ] }
yew-router = "0.18.0"
